--- a/configure.ac
+++ b/configure.ac
@@ -27,26 +27,23 @@
   # To add new components: add AC_ARG_ENABLE, AM_CONDITIONAL and update AC_OUTPUT
   #
 
+AC_MSG_CHECKING(for perl regular expressions support)
+AC_ARG_WITH(pcre, AC_HELP_STRING([--with-pcre],[Enable pcre support (default yes)]),
+    [WITH_PCRE=$withval],[WITH_PCRE=yes])
+AC_MSG_RESULT([$WITH_PCRE])
 
-  AC_MSG_CHECKING(for perl regular expressions support)
-  AC_ARG_WITH(pcre, AC_HELP_STRING([--with-pcre],[Enable pcre support (default yes)]),
-      [WITH_PCRE=$withval],[WITH_PCRE=yes])
-  AC_MSG_RESULT([$WITH_PCRE])
+if test "$WITH_PCRE" != "no"; then
+  PKG_CHECK_MODULES(PCREPKG, [libpcre], [
+    PCRE_LIB=${PCREPKG_LIBS}
+    CPPFLAGS="$CPPFLAGS ${PCREPKG_CFLAGS}"
+    AC_DEFINE([HAVE_LIBPCRE], [1], [libpcre])
+    AC_DEFINE([HAVE_PCRE_H], [1], [pcre.h])
+  ], [
+     AC_MSG_ERROR([pcre-config not found, install the pcre-devel package or build with --without-pcre])
+  ])
+fi
 
-  if test "$WITH_PCRE" != "no"; then
-    AC_PATH_PROG(PCRECONFIG, pcre-config)
-
-    if test x"$PCRECONFIG" != x; then
-      PCRE_LIB=`$PCRECONFIG --libs`
-      CPPFLAGS="$CPPFLAGS `$PCRECONFIG --cflags`"
-      AC_DEFINE([HAVE_LIBPCRE], [1], [libpcre])
-      AC_DEFINE([HAVE_PCRE_H], [1], [pcre.h])
-    else
-       AC_MSG_ERROR([pcre-config not found, install the pcre-devel package or build with --without-pcre])
-    fi
-  fi
-
-  AC_SUBST(PCRE_LIB)
+AC_SUBST(PCRE_LIB)
 
   AC_OUTPUT([ \
           Makefile \
